book/tests/snapshots/snapshot__run_reference_prql@language-features__strings-3.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/language-features/strings-3.prql
---
SELECT
  'I said "hello world"!' AS x
FROM
  my_table
